; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/crypto/extr_des_s390.c_ctr_des3_decrypt.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/crypto/extr_des_s390.c_ctr_des3_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blkcipher_desc = type { i32 }
%struct.scatterlist = type { i32 }
%struct.blkcipher_walk = type { i32 }

@CPACF_KMCTR_TDEA_192 = common dso_local global i32 0, align 4
@CPACF_DECRYPT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.blkcipher_desc*, %struct.scatterlist*, %struct.scatterlist*, i32)* @ctr_des3_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ctr_des3_decrypt(%struct.blkcipher_desc* %0, %struct.scatterlist* %1, %struct.scatterlist* %2, i32 %3) #0 {
  %5 = alloca %struct.blkcipher_desc*, align 8
  %6 = alloca %struct.scatterlist*, align 8
  %7 = alloca %struct.scatterlist*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.blkcipher_walk, align 4
  store %struct.blkcipher_desc* %0, %struct.blkcipher_desc** %5, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %6, align 8
  store %struct.scatterlist* %2, %struct.scatterlist** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %11 = load %struct.scatterlist*, %struct.scatterlist** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @blkcipher_walk_init(%struct.blkcipher_walk* %9, %struct.scatterlist* %10, %struct.scatterlist* %11, i32 %12)
  %14 = load %struct.blkcipher_desc*, %struct.blkcipher_desc** %5, align 8
  %15 = load i32, i32* @CPACF_KMCTR_TDEA_192, align 4
  %16 = load i32, i32* @CPACF_DECRYPT, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @ctr_desall_crypt(%struct.blkcipher_desc* %14, i32 %17, %struct.blkcipher_walk* %9)
  ret i32 %18
}

declare dso_local i32 @blkcipher_walk_init(%struct.blkcipher_walk*, %struct.scatterlist*, %struct.scatterlist*, i32) #1

declare dso_local i32 @ctr_desall_crypt(%struct.blkcipher_desc*, i32, %struct.blkcipher_walk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
